infra/04-applications/05-services/banana-front/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-front
  labels:
    app: banana-front
  namespace: banana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banana-front
  template:
    metadata:
      labels:
        app: banana-front
    spec:
      containers:
        - name: banana-front
          image: rg.fr-par.scw.cloud/banana/banana-front:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
