infra/04-applications/05-services/banana-front/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banana-front
  namespace: banana
  labels:
    app: banana-front
spec:
  type: ClusterIP
  selector:
    app: banana-front
  ports:
    - port: 80
      targetPort: 8080
