infra/04-applications/05-services/banana-front/http-ingress.yaml
# UNUSED. It was for development phase
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banana-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app.bananaam.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: banana-front
            port:
              number: 80
